# foxyhtml

./: .gitignore  LICENSE  README.md  foxycss.py  foxyhtml.py  pyproject.toml  zensical.toml
benchmarks/: _mem_worker.py  bench.py  download_fixtures.py
benchmarks/fixtures/: medium.html  small.html
docs/: benchmarks.md  getting-started.md  index.md
docs/api/: foxyhtml.md  node.md  selectors.md
docs/guides/: clean.md  css-selectors.md  foxycss.md  searching.md
docs/overrides/: home.html
docs/stylesheets/: extra.css
src/foxyhtml/: __init__.py  css.py  parser.py
tests/: test_css.py  test_parser.py
